--- a/index.html
+++ b/index.html
@@ -10,35 +10,34 @@ Carly Copley
 
 <head>
   <meta charset="UTF-8">
-  <title>dev-baker-project</title>
+  <title>Tennis Court</title>
   <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.0.2/css/bootstrap.min.css'>
   <link rel="stylesheet" href="./style.css">
-  <title>Tennis Court</title>
 </head>
 
 <body>
   <!-- import the font -->
-  <head>
+<!--   <head>
     <style>
       @import url('https://fonts.googleapis.com/css2?family=Tourney:ital,wght@0,100..900;1,100..900&display=swap');
     </style>
-  </head>
+  </head> -->
 
 
 
   <!-- everything in the grey grid -->
   <div id="banner">
     <h1 id="name">
-      <center>🦭TENNIS COURT🦭
+      <center>🦭TENNIS COURT🦭</center>
     </h1>
     <div id="description">
-      <center>This is a bird's eye view of a tennis court.
+      <center>This is a bird's eye view of a tennis court.</center>
     </div>
     <div id="madeBy">
-      <center>Made by Carly Copley
+      <center>Made by Carly Copley</center>
     </div>
     <div id="seals">
-      <center>🦭🦭🦭
+      <center>🦭🦭🦭</center>
     </div>
   </div>
 
@@ -55,7 +54,7 @@ Carly Copley
   <!-- show the coordinates of adBox -->
   <div id="target">
     <p>
-      <center>Click the button to get the coordinates of adBox.
+      <center>Click the button to get the coordinates of adBox.</center>
     </p>
     <button onclick="getPoint()">Click me!</button>
     <p id="output"></p>
@@ -67,7 +66,7 @@ Carly Copley
   <div id="tennisCourt">
 
     <div id="baseRectangleFront">
-      <center>baseFront (draggable)
+      <center>baseFront (draggable)</center>
     </div>
 
     <div id="adBox">adBox *click me</div>
@@ -75,7 +74,7 @@ Carly Copley
     <div id="deuceBox">deuceBox</div>
 
     <div id="baseRectangleBack">
-      <center>baseBack
+      <center>baseBack</center>
     </div>
 
     <div id="alleyLeft">alleyLeft</div>
